manifests/cpu-limit.yml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins1-cpu
spec:
  containers:
  - name: jenkins1-container
    image: jenkins/jenkins
    resources:
      limits:
        cpu: "1"
      requests:
        cpu: "0.5"
