manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1-deployment
spec:
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1-container
        image: nginx
