manifests/exvol.yml
apiVersion: v1
kind: Pod
metadata:
  name: volpod
spec:
  containers:
  - name: volpod-container
    image: ubuntu
    command: ["/bin/sleep","3650d"]
    volumeMounts:
    - name: data-storage
      mountPath: /data1/
  volumes:
  - name: data-storage
    hostPath:
        path: /volume1
        type: Directory
