manifests/pod-namespace.yml
apiVersion: v1
kind: Pod
metadata:
  name: prod-workload
  namespace: prod
spec:
  containers:
  - name: ubuntu1
    image: ubuntu
    command: ["/bin/sleep","3650d"]
