manifests/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app1
spec:
  containers:
  - name: app1-container
    image: nginx
    ports:
      - containerPort: 8080
