manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: stream-with-ease.com
      http:
        paths:
          - path: /
            backend:
              serviceName: authentication-app
              servicePort: 8080

          - path: /videos
            backend:
              serviceName: streaming-app
              servicePort: 8080
